# four_wheel_robot

./: CMakeLists.txt  package.xml
model/: four_wheel_robot.urdf
plugins/: CMakeLists.txt  CenterOfMassPlugin.cc
world/: four_wheel_robot.world
